# Marvin

./: OptionsDialog.qml  README.md  SequenceControl.qml  SequencerGUI.pro  ServoControl.qml  SingleServoControl.qml  StepControl.qml  main.cpp  main.qml  qml.qrc  sequence.cpp  sequence.h  sequencepoint.cpp  sequencepoint.h  sequencer.cpp  sequencer.h  serialcommunication.cpp  serialcommunication.h
Arduino/: AdafruitLEDBackpack.cpp  Adafruit_PWMServoDriver.cpp  Arduino.ino  README.md  sequenceplayer.cpp  sequenceplayer.h  sequencepoint.h  serialcommunication.cpp  serialcommunication.h
Arduino/Face/: Face.ino
Firmware/: AdafruitGFX.cpp  AdafruitLEDBackpack.h  AdafruitPWMServoDriver.cpp  Firmware.ino  sequenceplayer.h  serialcommunication.cpp  serialcommunication.h
PC/: OptionsDialog.qml  README.md  SequenceControl.qml  SequencerGUI.pro.user.18  SequencerGUI.pro.user.3.2-pre1  ServoControl.qml  SingleServoControl.qml  StepControl.qml  main.cpp  main.qml  qml.qrc  sequence.cpp  sequence.h  sequencepoint.cpp  sequencepoint.h  sequencer.cpp  sequencer.h  serialcommunication.cpp  serialcommunication.h  utils.h
Robot/: Marvin assembly.fcstd  README.md
SequencerGUI/: README.md  SingleServoControl.qml  main.qml  serialcommunication.cpp  serialcommunication.h  utils.h
tdd/: CMakeLists.txt
tdd/core/: CMakeLists.txt
tdd/core/include/: sequence.h  sequencepoint.h  utils.h
tdd/core/src/: sequence.cpp  sequencepoint.cpp
tdd/main/: CMakeLists.txt  main.cpp
tdd/test/: CMakeLists.txt  testsequence.cpp  testsequencepoint.cpp  testutils.cpp
tdd/test/tutils/: CMakeLists.txt
tdd/test/tutils/include/: tutils.h
tdd/test/tutils/src/: tutils.cpp
